--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="renderer.js"></script>
+    <title>Autosave</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <h1>Notepad Autosave Program</h1>
+    <p>
+      If you want to Start this program,
+      <br/>
+      Click the Start Button
+    </p>
+    <button id="StartBtn" onclick="Start();">Start</button>
+    <button id="StopBtn" onclick="window.clearInterval(int);return false;">Stop</button>
   </body>
-
-  <script>
-    // You can also require other files to run in this process
-    require('./renderer.js')
-  </script>
 </html>
