--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="renderer.js"></script>
-    <title>Autosave</title>
-  </head>
-  <body>
-    <h1>Notepad Autosave Program</h1>
-    <p>
-      If you want to Start this program,
-      <br/>
-      Click the Start Button
-    </p>
-    <button id="StartBtn" onclick="Start();">Start</button>
-    <button id="StopBtn" onclick="window.clearInterval(int);return false;">Stop</button>
-  </body>
+<head>
+	<meta charset="UTF-8">
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script type="text/javascript" src="renderer.js"></script>
+	<title>Autosave</title>
+</head>
+
+<body>
+	<h1>Notepad Autosave Program</h1>
+	<input type="button" id="btn-readfile" value="elect a file to see its content">
+</body>
+
+<script>
+	// filesystem module
+	const fs = require("fs");
+
+	// Dialogs module
+	const {dialog} = require("electron").remote;
+
+	document.getElementById("btn-readfile").addEventListener("click", () => {
+	  dialog.showOpenDialog((fileNames) => {
+	    if(fileNames === undefined) {
+	      console.log("No files were selected");
+	      return;
+			}
+
+			fs.readFile()
+	});
+	});
+</script>
 </html>
+
