--- a/index.html
+++ b/index.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--meta tag-->
 	<meta charset="UTF-8">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="renderer.js"></script>
+	<meta name="description" content="Kyung Hee Univ. Electronic Engineering. Team608. Graduation Project. Typing Assistant">
+	<meta name="keywords" content="Kyung Hee, Team608, Graduation Project, Typing Assistant">
+	<meta name="author" content="Junyoung Jung(sauber92)">
+
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+	<link rel="stylesheet" href="public/css/style.css">
+	<script type="text/javascript" src="public/js/renderer.js"></script>
+
 	<title>Team608 | Typing Assistant</title>
 </head>
 
 <body>
-	<h1>Typing Assistant</h1>
-	<input type="button" id="btn-readfile" value="노트 불러오기">
-	<div>
-		<textarea id="file-section" rows="5" cols="70"></textarea>
+	<header>
+		<h1>Team608</h1>
+		<button id="btnReadFile">Note Load</button>
+		<button id="btnStart" >Start</button>
+		<div class="clear-fix"></div>
+		<div class="line"></div>
+	</header>
+	<div class="word-section">
+		<p class="remain-time-text">Remain Time: <span id="time">60</span> sec</p>
+		<p class="score-text">Score: <span id="score">0</span></p>
+		<div class="clear-fix"></div>
+		<div id="fileSection"></div>
 	</div>
+	<footer>
+		<p>Made by Khug Hee Uiv. Electronic Engineering.</p>
+	</footer>
 </body>
 
 <script>
-  // Filesystem module
   const fs = require("fs");
-
-  // Dialogs module
   const {dialog} = require("electron").remote;
 
-  document.getElementById("btn-readfile").addEventListener("click", () => {
+  document.getElementById("btnReadFile").addEventListener("click", () => {
     dialog.showOpenDialog((fileNames) => {
       if(fileNames === undefined) {
-        console.log("No files were selected");
+        console.log("No files");
         return;
       }
 
@@ -35,8 +50,7 @@
           return;
         }
 
-        document.getElementById("file-section").value = data;
-        console.log("The content of the file is : " + data);
+        document.getElementById("fileSection").value = data;
       });
     });
   });
