--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<meta name="description" content="Kyung Hee Univ. Electronic Engineering. Team608. Graduation Project. Typing Assistant">
 	<meta name="keywords" content="Kyung Hee, Team608, Graduation Project, Typing Assistant">
 	<meta name="author" content="Junyoung Jung(sauber92)">
-
+	<!--web font-->
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+	<!--css-->
 	<link rel="stylesheet" href="public/css/style.css">
+	<!--javascript-->
 	<script type="text/javascript" src="public/js/renderer.js"></script>
 
 	<title>Team608 | Typing Assistant</title>
@@ -17,7 +20,6 @@
 <body>
 	<header>
 		<h1>Team608</h1>
-		<button id="btnReadFile">Note Load</button>
 		<button id="btnStart" >Start</button>
 		<div class="clear-fix"></div>
 		<div class="line"></div>
@@ -32,28 +34,5 @@
 		<p>Made by Khug Hee Uiv. Electronic Engineering.</p>
 	</footer>
 </body>
-
-<script>
-  const fs = require("fs");
-  const {dialog} = require("electron").remote;
-
-  document.getElementById("btnReadFile").addEventListener("click", () => {
-    dialog.showOpenDialog((fileNames) => {
-      if(fileNames === undefined) {
-        console.log("No files");
-        return;
-      }
-
-      fs.readFile(fileNames[0], 'utf-8', (err, data) => {
-        if(err) {
-          console.log("Cannot read file ", err);
-          return;
-        }
-
-        document.getElementById("fileSection").value = data;
-      });
-    });
-  });
-</script>
 </html>
 
