아두이노와 시리얼 통신 & 아두이노 연결 상태에 따른 버튼 비활성화

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
   <h1>Team608</h1>
-  <button id="btnStart" >Start</button>
+  <button id="btnStart" class="disconnect" disabled="true">Start</button>
   <div class="clear-fix"></div>
   <div class="line"></div>
 </header>
