--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <header>
   <h1>Team608</h1>
-  <button id="btnStart" class="disconnect" disabled="true">Start</button>
+  <button id="btnStart" class="connect">Start</button>
   <div class="clear-fix"></div>
   <div class="line"></div>
 </header>
